--- a/MvcCoreAdoNet/Views/Home/ListaMascotas.cshtml
+++ b/MvcCoreAdoNet/Views/Home/ListaMascotas.cshtml
@@ -1,10 +1,10 @@
 ﻿@model List<Mascota>
 
 @section titulos {
-    <h1>Lista Mascotas</h1>
+    <h1>Lista de mascotas</h1>
 }
 
-<table class="table table-borderless">
+<table class="table table-borderless mt-3">
     <thead class="small">
         <tr>
             <th>Nombre</th>
