--- a/MvcCoreAdoNet/Views/Shared/_Layout.cshtml
+++ b/MvcCoreAdoNet/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Home" asp-action="ListaMascotas">Lista Mascotas</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Hospitales" asp-action="Index">Lista Hospitales</a>
+                        </li>
                     </ul>
                 </div>
             </div>
