--- a/MvcCoreAdoNet/Views/Home/Index.cshtml
+++ b/MvcCoreAdoNet/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@section titulos {
-    <h1>Inicio</h1>
-}
+﻿<h1>Inicio</h1>
+
 
 <button class="btn btn-primary mt-3" id="boton-bienvenida">Botón de bienvenida</button>
 
@@ -8,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         $(function () {
-            $("#boton-bienvenida").on("click", function (){
+            $("#boton-bienvenida").on("click", function () {
                 Swal.fire("Bienvenido no se que");
             });
         });
