--- a/MvcCoreAdoNet/Views/Shared/_Layout.cshtml
+++ b/MvcCoreAdoNet/Views/Shared/_Layout.cshtml
@@ -3,6 +3,14 @@
 <head>
     <link rel="stylesheet" href="~/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/sticky-footer-navbar.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <style>
+        * {
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -18,10 +26,13 @@
                             <a class="nav-link" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="ListaMascotas">Lista Mascotas</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="ListaMascotas">Mascotas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Hospitales" asp-action="Index">Lista Hospitales</a>
+                            <a class="nav-link" asp-controller="Hospitales" asp-action="Index">Hospitales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Doctores" asp-action="Index">Doctores</a>
                         </li>
                     </ul>
                 </div>
@@ -30,7 +41,6 @@
     </header>
 
     <div class="container card shadow-lg p-4 mt-5 w-75">
-        @RenderSection("titulos")
         @RenderBody()
     </div>
 
