--- a/MvcCoreAdoNet/Views/Hospitales/Index.cshtml
+++ b/MvcCoreAdoNet/Views/Hospitales/Index.cshtml
@@ -8,7 +8,7 @@
 </p>
 
 <div class="card mt-3">
-    <table class="table table-borderless">
+    <table class="table table-borderless mt-1">
         <thead class="small">
             <tr>
                 <th>Nombre</th>
